ssh va websocket qo'shilmoqda va fake filelar

--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/platform-socket.io": "^11.0.11",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^11.0.11",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.7.6",
@@ -59,6 +61,7 @@
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "ssh2": "^1.16.0",
     "typeorm": "^0.3.20",
     "winston": "^3.17.0",
